--- a/VisitArrangement/appsettings.json
+++ b/VisitArrangement/appsettings.json
@@ -11,5 +11,8 @@
     "validAudience": "https://localhost:5011",
     "expiryInMinutes": 5
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=VisitArrangement;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
