--- a/VisitArrangement.Domain/VisitArrangement.Domain.csproj
+++ b/VisitArrangement.Domain/VisitArrangement.Domain.csproj
@@ -23,4 +23,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\VisitArrangement.Infrastructure\VisitArrangement.Infrastructure.csproj" />
+	</ItemGroup>
 </Project>
